# XAgent

./: .coveragerc  .env.example  .gitignore  AKTUELLE_ERGEBNISSE_2025-11-09.md  AKTUELLE_FEATURES_STATUS_2025-11-11.md  AKTUELLE_RESULTATE.md  AKTUELLE_RESULTATE_2025-11-10.md  AKTUELLE_RESULTATE_2025-11-12.md  AKTUELLE_RESULTATE_2025-11-12_FINAL.md  AKTUELLE_RESULTATE_2025-11-12_FINAL_DEMONSTRATION.md  ANALYSIS_2025-11-10.md  ANLEITUNG_RESULTATE_2025-11-13.md  CHANGELOG.md  CHROMADB_SEMANTIC_MEMORY_IMPLEMENTATION.md  COMPLETE_RESULTS_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_RESULTS_2025-11-12.md  COMPREHENSIVE_RESULTS_2025-11-12_FINAL.md  COMPREHENSIVE_RESULTS_2025-11-14.md  COMPREHENSIVE_RESULTS_FINAL_2025-11-11.md  COMPREHENSIVE_SYSTEM_DEMONSTRATION_2025-11-12.json  COMPREHENSIVE_SYSTEM_DEMONSTRATION_2025-11-12.md  COMPREHENSIVE_VALIDATION_RESULTS_2025-11-13.md  CONCRETE_RESULTS_2025-11-14.md  CONTRIBUTING.md  DEMO.sh  DEMONSTRATED_RESULTS_2025-11-14.md  DEMONSTRATION_ABGESCHLOSSEN_2025-11-11.md  DEMONSTRIERTE_ERGEBNISSE_2025-11-10.md  Dockerfile  ENHANCEMENT_RESULTS.md  ENHANCEMENT_SUMMARY.md  ERFOLGE_2025-11-09.md  ERFOLG_UEBERSICHT_2025-11-13.md  ERGEBNISSE_2025-11-09.md  ERGEBNISSE_PROPERTY_TESTING_2025-11-11.md  ERGEBNISSE_ZUSAMMENFASSUNG.md  ERGEBNISSE_ZUSAMMENFASSUNG_2025-11-09.md  ERGEBNISSE_ZUSAMMENFASSUNG_2025_11_13.md  FEATURES.md  (+99 more)
alembic/: README  env.py
benchmark_results/: baseline.json  baseline_demo.json
config/: prometheus.yml  promtail-config.yml  security_policy.yml
docs/: ABSCHLUSS_BERICHT_2025-11-09.md  ALERTING.md  ALERT_RUNBOOKS.md  API.md  ARCHITECTURE.md  BENCHMARK_SUITE.md  CACHING.md  CLI_SHELL_COMPLETION.md  CONTENT_MODERATION.md  CREWAI_EVALUATION.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  EMERGENT_INTELLIGENCE.md  FEATURES.md  HELM_DEPLOYMENT.md  HTTP_CLIENT.md  INTEGRATION_QUICK_REF.md  INTEGRATION_ROADMAP.md  INTERNAL_RATE_LIMITING.md  OBSERVABILITY.md  PERFORMANCE_BENCHMARKING.md  PHASE_2_SUMMARY.md  QUICKSTART.md  QUICK_START_MONITORING.md  RATE_LIMITING.md  RATE_LIMITING_QUICKSTART.md  RESULTATE_PRAESENTATION_2025-11-09_FINAL.md  RESULTS_SHOWCASE_2025-11-09.md  SESSION_SUMMARY_2025-11-09.md  TASK_QUEUE.md  TASK_QUEUE_EVALUATION.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  WATCHDOG.md  agent_progress.json
examples/: README.md  advanced_results_showcase.py  agent_roles_demo.py  automated_demo.py  basic_usage.py  checkpoint_and_metrics_demo.py  complete_demonstration.py  complete_results_showcase.py  comprehensive_demo.py  comprehensive_demonstration_2025_11_14.py  comprehensive_feature_demo.py  comprehensive_feature_demonstration_2025_11_14.py  comprehensive_feature_validation.py  comprehensive_results_demo.py  comprehensive_results_demo_2025_11_14.py  comprehensive_results_demonstration.py  demonstrate_results.py  final_results_showcase.py  generate_comprehensive_results.py  goal_management.py  http_client_demo.py  interactive_showcase.py  learning_demo.py  live_comprehensive_demo.py  live_demonstration_2025_11_14.py  live_feature_demo_2025_11_13.py  live_feature_demo_2025_11_14.py  moderation_demo.py  multi_agent_coordination_demo.py  performance_benchmark.py  performance_profiling_demo.py  (+18 more)
(+393 files in other folders)
